Language file fixes and verify dbreset function with a good DB Import.

--- a/admin/language/de-DE/de-DE.com_proclaim.ini
+++ b/admin/language/de-DE/de-DE.com_proclaim.ini
@@ -712,50 +712,50 @@ JBS_PDC_XML_FILES_ERROR="Fehler beim Schreiben einer oder mehrerer Podcast XML D
 JBS_PDC_XML_FILES_WRITTEN="Podcast XML Dateien erzeugt"
 
 ;; PLG Plugin specific strings (all plugins)
-JBS_PLG_BACKUP_EMAIL_MSG_ERROR="Fehler beim Erstellen der Sicherungskopie"
-JBS_PLG_BACKUP_EMAIL_MSG_SUCCESS="Sicherungskopie erfolgreich abgespeichert"
-JBS_PLG_BACKUP_FILES="Anzahl der aufbewahrten Sicherungsdateien"
-JBS_PLG_BACKUP_FILES_DESC="Wenn mehr Sicherungsdateien als diese Anzahl angelegt wurden, wird die älteste gelöscht"
-JBS_PLG_BACKUP_INCLUDEDB="Datenbasis anhängen"
-JBS_PLG_BACKUP_INCLUDEDB_DESC="Soll die Datenbasis als Zip-Datei an die Email angehängt werden?"
-JBS_PLG_PODCASTBACKUP_CHOOSE_DAY="Wähle einen Tag zur Generierung"
-JBS_PLG_PODCASTBACKUP_CHOOSE_HOUR="Wähle eine Zeit zur Generierung"
-JBS_PLG_PODCASTBACKUP_DAY10="Tag 10"
-JBS_PLG_PODCASTBACKUP_DAY1="Tag 1"
-JBS_PLG_PODCASTBACKUP_DAY2="Tag 2"
-JBS_PLG_PODCASTBACKUP_DAY3="Tag 3"
-JBS_PLG_PODCASTBACKUP_DAY4="Tag 4"
-JBS_PLG_PODCASTBACKUP_DAY5="Tag 5"
-JBS_PLG_PODCASTBACKUP_DAY6="Tag 6"
-JBS_PLG_PODCASTBACKUP_DAY7="Tag 7"
-JBS_PLG_PODCASTBACKUP_DAY8="Tag 8"
-JBS_PLG_PODCASTBACKUP_DAY9="Tag 9"
-JBS_PLG_PODCASTBACKUP_EMAIL_BODY="Inhalt"
-JBS_PLG_PODCASTBACKUP_EMAIL_SEND="Sende eine Email Benachrichtigung"
-JBS_PLG_PODCASTBACKUP_EMAIL_SEND_DESC="Sende eine Email, wenn eine Generierung gestartet wurde."
-JBS_PLG_PODCASTBACKUP_EMAIL_SUBJECT="Betreff"
-JBS_PLG_PODCASTBACKUP_EMAIL_TO="an Email Adresse(n)"
-JBS_PLG_PODCASTBACKUP_EMAIL_TO_DESC="Ziel-Emailadresse(n). Wenn das Feld leer ist, wird die System Standard-Emailadresse verwendet. Trenne mehrere Adressen mit Kommas."
-JBS_PLG_PODCASTBACKUP_GENERATE_EVERY="Generierung alle x Stunden"
-JBS_PLG_PODCASTBACKUP_GENERATE_EVERY_DESC="Generierung neu starten x Stunden nach der letzten Generierung. ('24' generiert einmal pro Tag)"
-JBS_PLG_PODCASTBACKUP_GENERATE_METHOD="Wähle die Generierungsmethode"
-JBS_PLG_PODCASTBACKUP_GENERATE_METHOD_DESC="Soll die Generierung im (Mehr-)Stundenrhythmus oder zu einer bestimmten Tag / Uhrzeit erfolgen?"
-JBS_PLG_PODCASTBACKUP_HOURS="Stundenrhythmus"
-JBS_PLG_PODCASTBACKUP_HOUR_DAY10="Uhrzeit am Tag 10"
-JBS_PLG_PODCASTBACKUP_HOUR_DAY1="Uhrzeit am Tag 1"
-JBS_PLG_PODCASTBACKUP_HOUR_DAY2="Uhrzeit am Tag 2"
-JBS_PLG_PODCASTBACKUP_HOUR_DAY3="Uhrzeit am Tag 3"
-JBS_PLG_PODCASTBACKUP_HOUR_DAY4="Uhrzeit am Tag 4"
-JBS_PLG_PODCASTBACKUP_HOUR_DAY5="Uhrzeit am Tag 5"
-JBS_PLG_PODCASTBACKUP_HOUR_DAY6="Uhrzeit am Tag 6"
-JBS_PLG_PODCASTBACKUP_HOUR_DAY7="Uhrzeit am Tag 7"
-JBS_PLG_PODCASTBACKUP_HOUR_DAY8="Uhrzeit am Tag 8"
-JBS_PLG_PODCASTBACKUP_HOUR_DAY9="Uhrzeit am Tag 9"
-JBS_PLG_PODCASTBACKUP_SCHEDULE="Zeitplan"
-JBS_PLG_PODCASTBACKUP_SERVER_NO_OFFSET="Kein Offset"
-JBS_PLG_PODCASTBACKUP_SERVER_OFFSET="Zeit Offset des Servers"
-JBS_PLG_PODCASTBACKUP_SERVER_OFFSET_DESC="Hier kann eine Zeitverschiebung des Servers kompensiert werden"
-JBS_PLG_PODCASTBACKUP_SERVER_USE_OFFSET="Benutze Offset"
+PLG_SYSTEM_PROCLAIMBACKUP_EMAIL_MSG_ERROR="Fehler beim Erstellen der Sicherungskopie"
+PLG_SYSTEM_PROCLAIMBACKUP_EMAIL_MSG_SUCCESS="Sicherungskopie erfolgreich abgespeichert"
+PLG_SYSTEM_PROCLAIMBACKUP_FILES="Anzahl der aufbewahrten Sicherungsdateien"
+PLG_SYSTEM_PROCLAIMBACKUP_FILES_DESC="Wenn mehr Sicherungsdateien als diese Anzahl angelegt wurden, wird die älteste gelöscht"
+PLG_SYSTEM_PROCLAIMBACKUP_INCLUDEDB="Datenbasis anhängen"
+PLG_SYSTEM_PROCLAIMBACKUP_INCLUDEDB_DESC="Soll die Datenbasis als Zip-Datei an die Email angehängt werden?"
+PLG_SYSTEM_PROCLAIMPODCAST_CHOOSE_DAY="Wähle einen Tag zur Generierung"
+PLG_SYSTEM_PROCLAIMPODCAST_CHOOSE_HOUR="Wähle eine Zeit zur Generierung"
+PLG_SYSTEM_PROCLAIMPODCAST_DAY10="Tag 10"
+PLG_SYSTEM_PROCLAIMPODCAST_DAY1="Tag 1"
+PLG_SYSTEM_PROCLAIMPODCAST_DAY2="Tag 2"
+PLG_SYSTEM_PROCLAIMPODCAST_DAY3="Tag 3"
+PLG_SYSTEM_PROCLAIMPODCAST_DAY4="Tag 4"
+PLG_SYSTEM_PROCLAIMPODCAST_DAY5="Tag 5"
+PLG_SYSTEM_PROCLAIMPODCAST_DAY6="Tag 6"
+PLG_SYSTEM_PROCLAIMPODCAST_DAY7="Tag 7"
+PLG_SYSTEM_PROCLAIMPODCAST_DAY8="Tag 8"
+PLG_SYSTEM_PROCLAIMPODCAST_DAY9="Tag 9"
+PLG_SYSTEM_PROCLAIMPODCAST_EMAIL_BODY="Inhalt"
+PLG_SYSTEM_PROCLAIMPODCAST_EMAIL_SEND="Sende eine Email Benachrichtigung"
+PLG_SYSTEM_PROCLAIMPODCAST_EMAIL_SEND_DESC="Sende eine Email, wenn eine Generierung gestartet wurde."
+PLG_SYSTEM_PROCLAIMPODCAST_EMAIL_SUBJECT="Betreff"
+PLG_SYSTEM_PROCLAIMPODCAST_EMAIL_TO="an Email Adresse(n)"
+PLG_SYSTEM_PROCLAIMPODCAST_EMAIL_TO_DESC="Ziel-Emailadresse(n). Wenn das Feld leer ist, wird die System Standard-Emailadresse verwendet. Trenne mehrere Adressen mit Kommas."
+PLG_SYSTEM_PROCLAIMPODCAST_GENERATE_EVERY="Generierung alle x Stunden"
+PLG_SYSTEM_PROCLAIMPODCAST_GENERATE_EVERY_DESC="Generierung neu starten x Stunden nach der letzten Generierung. ('24' generiert einmal pro Tag)"
+PLG_SYSTEM_PROCLAIMPODCAST_GENERATE_METHOD="Wähle die Generierungsmethode"
+PLG_SYSTEM_PROCLAIMPODCAST_GENERATE_METHOD_DESC="Soll die Generierung im (Mehr-)Stundenrhythmus oder zu einer bestimmten Tag / Uhrzeit erfolgen?"
+PLG_SYSTEM_PROCLAIMPODCAST_HOURS="Stundenrhythmus"
+PLG_SYSTEM_PROCLAIMPODCAST_HOUR_DAY10="Uhrzeit am Tag 10"
+PLG_SYSTEM_PROCLAIMPODCAST_HOUR_DAY1="Uhrzeit am Tag 1"
+PLG_SYSTEM_PROCLAIMPODCAST_HOUR_DAY2="Uhrzeit am Tag 2"
+PLG_SYSTEM_PROCLAIMPODCAST_HOUR_DAY3="Uhrzeit am Tag 3"
+PLG_SYSTEM_PROCLAIMPODCAST_HOUR_DAY4="Uhrzeit am Tag 4"
+PLG_SYSTEM_PROCLAIMPODCAST_HOUR_DAY5="Uhrzeit am Tag 5"
+PLG_SYSTEM_PROCLAIMPODCAST_HOUR_DAY6="Uhrzeit am Tag 6"
+PLG_SYSTEM_PROCLAIMPODCAST_HOUR_DAY7="Uhrzeit am Tag 7"
+PLG_SYSTEM_PROCLAIMPODCAST_HOUR_DAY8="Uhrzeit am Tag 8"
+PLG_SYSTEM_PROCLAIMPODCAST_HOUR_DAY9="Uhrzeit am Tag 9"
+PLG_SYSTEM_PROCLAIMPODCAST_SCHEDULE="Zeitplan"
+PLG_SYSTEM_PROCLAIMPODCAST_SERVER_NO_OFFSET="Kein Offset"
+PLG_SYSTEM_PROCLAIMPODCAST_SERVER_OFFSET="Zeit Offset des Servers"
+PLG_SYSTEM_PROCLAIMPODCAST_SERVER_OFFSET_DESC="Hier kann eine Zeitverschiebung des Servers kompensiert werden"
+PLG_SYSTEM_PROCLAIMPODCAST_SERVER_USE_OFFSET="Benutze Offset"
 JBS_PLG_PODCAST_EMAIL_BODY_RUN="Aktualisiert am: "
 JBS_PLG_PODCAST_ONLY_EMAIL_ERRORS="Sende eine Email nur bei Fehlern"
 JBS_PLG_SEARCH_LIMIT="Anzahl der Ergebnisse"
