--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -991,50 +991,50 @@ JBS_PDC_XML="XML"
 
 ;; PLG Plugin specific strings (all plugins)
 PLG_JBSBACKUP_HEADER="Your site's CWM-Proclaim database backup"
-JBS_PLG_BACKUP_EMAIL_MSG_ERROR="Errors in backup process"
-JBS_PLG_BACKUP_EMAIL_MSG_SUCCESS="Backup was successful"
-JBS_PLG_BACKUP_FILES="Number of backup files to keep"
-JBS_PLG_BACKUP_FILES_DESC="After this number of backups have been created the oldest will be deleted"
-JBS_PLG_BACKUP_INCLUDEDB="Include database file"
-JBS_PLG_BACKUP_INCLUDEDB_DESC="Choose whether or not to include a zip file of the jbs backup database with the email as an attachment"
-JBS_PLG_PODCASTBACKUP_CHOOSE_DAY="Choose a day to generate"
-JBS_PLG_PODCASTBACKUP_CHOOSE_HOUR="Choose an hour to generate"
-JBS_PLG_PODCASTBACKUP_DAY10="Day 10"
-JBS_PLG_PODCASTBACKUP_DAY1="Day 1"
-JBS_PLG_PODCASTBACKUP_DAY2="Day 2"
-JBS_PLG_PODCASTBACKUP_DAY3="Day 3"
-JBS_PLG_PODCASTBACKUP_DAY4="Day 4"
-JBS_PLG_PODCASTBACKUP_DAY5="Day 5"
-JBS_PLG_PODCASTBACKUP_DAY6="Day 6"
-JBS_PLG_PODCASTBACKUP_DAY7="Day 7"
-JBS_PLG_PODCASTBACKUP_DAY8="Day 8"
-JBS_PLG_PODCASTBACKUP_DAY9="Day 9"
-JBS_PLG_PODCASTBACKUP_EMAIL_BODY="Body"
-JBS_PLG_PODCASTBACKUP_EMAIL_SEND="Send email notification"
-JBS_PLG_PODCASTBACKUP_EMAIL_SEND_DESC="Select Yes to send an email when the generation has been started."
-JBS_PLG_PODCASTBACKUP_EMAIL_SUBJECT="Subject"
-JBS_PLG_PODCASTBACKUP_EMAIL_TO="To Email address(s)"
-JBS_PLG_PODCASTBACKUP_EMAIL_TO_DESC="Email address to notify. Leave empty to send to the system default email address. Specify multiple addresses by separating them with a comma."
-JBS_PLG_PODCASTBACKUP_GENERATE_EVERY="Generate every x hours"
-JBS_PLG_PODCASTBACKUP_GENERATE_EVERY_DESC="Run generation every hour after the last run. (Enter 24 for once a day)"
-JBS_PLG_PODCASTBACKUP_GENERATE_METHOD="Choose generation method"
-JBS_PLG_PODCASTBACKUP_GENERATE_METHOD_DESC="Choose whether to generate by hour or by specific day/time"
-JBS_PLG_PODCASTBACKUP_HOURS="By Hours"
-JBS_PLG_PODCASTBACKUP_HOUR_DAY10="Hour of Day 10"
-JBS_PLG_PODCASTBACKUP_HOUR_DAY1="Hour of Day 1"
-JBS_PLG_PODCASTBACKUP_HOUR_DAY2="Hour of Day 2"
-JBS_PLG_PODCASTBACKUP_HOUR_DAY3="Hour of Day 3"
-JBS_PLG_PODCASTBACKUP_HOUR_DAY4="Hour of Day 4"
-JBS_PLG_PODCASTBACKUP_HOUR_DAY5="Hour of Day 5"
-JBS_PLG_PODCASTBACKUP_HOUR_DAY6="Hour of Day 6"
-JBS_PLG_PODCASTBACKUP_HOUR_DAY7="Hour of Day 7"
-JBS_PLG_PODCASTBACKUP_HOUR_DAY8="Hour of Day 8"
-JBS_PLG_PODCASTBACKUP_HOUR_DAY9="Hour of Day 9"
-JBS_PLG_PODCASTBACKUP_SCHEDULE="By Schedule"
-JBS_PLG_PODCASTBACKUP_SERVER_NO_OFFSET="No Offset"
-JBS_PLG_PODCASTBACKUP_SERVER_OFFSET="Use Server Time Offset"
-JBS_PLG_PODCASTBACKUP_SERVER_OFFSET_DESC="If time settings are off, try adjusting to configuration time offset set in Global"
-JBS_PLG_PODCASTBACKUP_SERVER_USE_OFFSET="Use Offset"
+PLG_SYSTEM_PROCLAIMBACKUP_EMAIL_MSG_ERROR="Errors in backup process"
+PLG_SYSTEM_PROCLAIMBACKUP_EMAIL_MSG_SUCCESS="Backup was successful"
+PLG_SYSTEM_PROCLAIMBACKUP_FILES="Number of backup files to keep"
+PLG_SYSTEM_PROCLAIMBACKUP_FILES_DESC="After this number of backups have been created the oldest will be deleted"
+PLG_SYSTEM_PROCLAIMBACKUP_INCLUDEDB="Include database file"
+PLG_SYSTEM_PROCLAIMBACKUP_INCLUDEDB_DESC="Choose whether or not to include a zip file of the jbs backup database with the email as an attachment"
+PLG_SYSTEM_PROCLAIMPODCAST_CHOOSE_DAY="Choose a day to generate"
+PLG_SYSTEM_PROCLAIMPODCAST_CHOOSE_HOUR="Choose an hour to generate"
+PLG_SYSTEM_PROCLAIMPODCAST_DAY10="Day 10"
+PLG_SYSTEM_PROCLAIMPODCAST_DAY1="Day 1"
+PLG_SYSTEM_PROCLAIMPODCAST_DAY2="Day 2"
+PLG_SYSTEM_PROCLAIMPODCAST_DAY3="Day 3"
+PLG_SYSTEM_PROCLAIMPODCAST_DAY4="Day 4"
+PLG_SYSTEM_PROCLAIMPODCAST_DAY5="Day 5"
+PLG_SYSTEM_PROCLAIMPODCAST_DAY6="Day 6"
+PLG_SYSTEM_PROCLAIMPODCAST_DAY7="Day 7"
+PLG_SYSTEM_PROCLAIMPODCAST_DAY8="Day 8"
+PLG_SYSTEM_PROCLAIMPODCAST_DAY9="Day 9"
+PLG_SYSTEM_PROCLAIMPODCAST_EMAIL_BODY="Body"
+PLG_SYSTEM_PROCLAIMPODCAST_EMAIL_SEND="Send email notification"
+PLG_SYSTEM_PROCLAIMPODCAST_EMAIL_SEND_DESC="Select Yes to send an email when the generation has been started."
+PLG_SYSTEM_PROCLAIMPODCAST_EMAIL_SUBJECT="Subject"
+PLG_SYSTEM_PROCLAIMPODCAST_EMAIL_TO="To Email address(s)"
+PLG_SYSTEM_PROCLAIMPODCAST_EMAIL_TO_DESC="Email address to notify. Leave empty to send to the system default email address. Specify multiple addresses by separating them with a comma."
+PLG_SYSTEM_PROCLAIMPODCAST_GENERATE_EVERY="Generate every x hours"
+PLG_SYSTEM_PROCLAIMPODCAST_GENERATE_EVERY_DESC="Run generation every hour after the last run. (Enter 24 for once a day)"
+PLG_SYSTEM_PROCLAIMPODCAST_GENERATE_METHOD="Choose generation method"
+PLG_SYSTEM_PROCLAIMPODCAST_GENERATE_METHOD_DESC="Choose whether to generate by hour or by specific day/time"
+PLG_SYSTEM_PROCLAIMPODCAST_HOURS="By Hours"
+PLG_SYSTEM_PROCLAIMPODCAST_HOUR_DAY10="Hour of Day 10"
+PLG_SYSTEM_PROCLAIMPODCAST_HOUR_DAY1="Hour of Day 1"
+PLG_SYSTEM_PROCLAIMPODCAST_HOUR_DAY2="Hour of Day 2"
+PLG_SYSTEM_PROCLAIMPODCAST_HOUR_DAY3="Hour of Day 3"
+PLG_SYSTEM_PROCLAIMPODCAST_HOUR_DAY4="Hour of Day 4"
+PLG_SYSTEM_PROCLAIMPODCAST_HOUR_DAY5="Hour of Day 5"
+PLG_SYSTEM_PROCLAIMPODCAST_HOUR_DAY6="Hour of Day 6"
+PLG_SYSTEM_PROCLAIMPODCAST_HOUR_DAY7="Hour of Day 7"
+PLG_SYSTEM_PROCLAIMPODCAST_HOUR_DAY8="Hour of Day 8"
+PLG_SYSTEM_PROCLAIMPODCAST_HOUR_DAY9="Hour of Day 9"
+PLG_SYSTEM_PROCLAIMPODCAST_SCHEDULE="By Schedule"
+PLG_SYSTEM_PROCLAIMPODCAST_SERVER_NO_OFFSET="No Offset"
+PLG_SYSTEM_PROCLAIMPODCAST_SERVER_OFFSET="Use Server Time Offset"
+PLG_SYSTEM_PROCLAIMPODCAST_SERVER_OFFSET_DESC="If time settings are off, try adjusting to configuration time offset set in Global"
+PLG_SYSTEM_PROCLAIMPODCAST_SERVER_USE_OFFSET="Use Offset"
 JBS_PLG_PODCAST_EMAIL_BODY_RUN="Process run at: "
 JBS_PLG_PODCAST_ONLY_EMAIL_ERRORS="Email only on error"
 JBS_PLG_SEARCH_LIMIT="Search Limit"
