--- a/plugins/finder/proclaim/language/de-DE/de-DE.plg_finder_biblestudy.sys.ini
+++ b/plugins/finder/proclaim/language/de-DE/de-DE.plg_finder_biblestudy.sys.ini
@@ -4,6 +4,6 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-JBS_PLG_FINDER="Suchindex - Joomla Bibelstudien"
-JBS_PLG_FINDER_XML_DESCRIPTION="Dieses Plugin indexiert die Joomla Bibelstudien Predigten."
+PLG_FINDER_PROCLAIM="Suchindex - Joomla Bibelstudien"
+PLG_FINDER_PROCLAIM_XML_DESCRIPTION="Dieses Plugin indexiert die Joomla Bibelstudien Predigten."
 PLG_FINDER_STATISTICS_STUDIES="Predigten"
