--- a/plugins/system/proclaimpodcast/language/en-GB/en-GB.plg_system_proclaimpodcast.ini
+++ b/plugins/system/proclaimpodcast/language/en-GB/en-GB.plg_system_proclaimpodcast.ini
@@ -1,4 +1,4 @@
-; $Id: en-GB.plg_system_proclaimpodcast.sys.ini  2011-04-27 02:40:25Z tomfuller $
+; $Id: en-GB.plg_system_jbspodcast.sys.ini  2011-04-27 02:40:25Z tomfuller $
 ; Proclaim
 ; Copyright (C) 2007 - 2015 Proclaim. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
