--- a/plugins/finder/proclaim/language/en-GB/en-GB.plg_finder_proclaim.ini
+++ b/plugins/finder/proclaim/language/en-GB/en-GB.plg_finder_proclaim.ini
@@ -5,8 +5,8 @@
 ; Note : All ini files need to be saved as UTF-8
 
 ; Filter for the finder index (singular and plural)
+PLG_FINDER_PROCLAIM="Smart Search - Proclaim"
 PLG_FINDER_QUERY_FILTER_BRANCH_S_STUDIES="Sermon"
-
 PLG_FINDER_QUERY_FILTER_BRANCH_P_STUDIES="Sermons"
 
 ; unused PLG_FINDER_QUERY_FILTER_BRANCH_S_AUTHOR="Author"
