--- a/plugins/finder/proclaim/language/en-GB/en-GB.plg_finder_proclaim.sys.ini
+++ b/plugins/finder/proclaim/language/en-GB/en-GB.plg_finder_proclaim.sys.ini
@@ -1,10 +1,9 @@
-; $Id: en-GB.plg_finder_biblestudy.sys.ini 20196 2011-04-27 02:40:25Z tef $
+; $Id: en-GB.plg_finder_proclaim.sys.ini 20196 2023-11-8 02:40:25Z tef $
 ; Proclaim
-; Copyright (C) 2007 - 2015 Proclaim. All rights reserved.
+; Copyright (C) 2007 - 2023 Proclaim. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-JBS_PLG_FINDER="Smart Search - Proclaim"
-JBS_PLG_FINDER_XML_DESCRIPTION="This plugin indexes Proclaim Messages."
-PLG_FINDER_STATISTICS_STUDIES="Studies"
-PLG_FINDER_PROCLAIM="Proclaim Finder"
+PLG_FINDER_PROCLAIM="Smart Search - Proclaim"
+PLG_FINDER_PROCLAIM_XML_DESCRIPTION="This plugin indexes Proclaim Messages."
+PLG_FINDER_PROCLAIM_STATISTICS_STUDIES="Studies"
