--- a/plugins/system/proclaimbackup/language/de-DE/de-DE.plg_system_proclaimbackup.sys.ini
+++ b/plugins/system/proclaimbackup/language/de-DE/de-DE.plg_system_proclaimbackup.sys.ini
@@ -4,8 +4,8 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-JBS_PLG_BACKUP="System - Proclaim Backup"
-JBS_PLG_BACKUP_XML_DESCRIPTION="Zeitgesteuertes Generieren von Sicherungskopien für die Proclaim Komponente"
+PLG_SYSTEM_PROCLAIMBACKUP="System - Proclaim Backup"
+PLG_SYSTEM_PROCLAIMBACKUP_XML_DESCRIPTION="Zeitgesteuertes Generieren von Sicherungskopien für die Proclaim Komponente"
 
-JBS_PLG_BACKUP_UNINSTALL_TEXT="Proclaim Backup Plugin erfolgreich deinstalliert"
-JBS_PLG_BACKUP_UPDATE_TEXT="Proclaim Backup Plugin erfolgreich aktualisiert"
+PLG_SYSTEM_PROCLAIMBACKUP_UNINSTALL_TEXT="Proclaim Backup Plugin erfolgreich deinstalliert"
+PLG_SYSTEM_PROCLAIMBACKUP_UPDATE_TEXT="Proclaim Backup Plugin erfolgreich aktualisiert"
