--- a/modules/site/mod_proclaim/language/en-GB/en-GB.mod_proclaim.ini
+++ b/modules/site/mod_proclaim/language/en-GB/en-GB.mod_proclaim.ini
@@ -5,8 +5,7 @@
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 ; Note : This is only the module form specific language file in the backend. For common definition see component language file
 
-MOD_BIBLESTUDY = "Proclaim Module"
-JBS_MDL_BIBLESTUDY = "Proclaim Module"
-JBS_MDL_BIBLESTUDY_XML_DESCRIPTION = "This module displays a list of studies. Component must be installed"
-JBS_MDL_DESCRIPTION = "This module displays a list of studies. Component must be installed."
 MOD_PROCLAIM = "Proclaim Sermons Module"
+MOD_PROCLAIM_XML_DESCRIPTION = "This module displays a list of studies. Component must be installed"
+MOD_PROCLAIM_DESCRIPTION = "This module displays a list of studies. Component must be installed."
+
