--- a/modules/site/mod_proclaim_podcast/language/en-GB/en-GB.mod_proclaim_podcast.sys.ini
+++ b/modules/site/mod_proclaim_podcast/language/en-GB/en-GB.mod_proclaim_podcast.sys.ini
@@ -1,9 +1,8 @@
-; $Id: en-GB.mod_biblestudy_podcast.sys.ini  2012-05-30 02:40:25Z tomfuller $
+; $Id: en-GB.mod_proclaim_podcast.sys.ini  2012-05-30 02:40:25Z tomfuller $
 ; Proclaim
 ; Copyright (C) 2007 - 2015 Proclaim. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-JBS_MDL_PODCAST = "Proclaim Podcast Subscribe"
-JBS_MDL_PODCAST_XML_DESCRIPTION = "This module displays a list of podcast. Component must be installed."
 MOD_PROCLAIM_PODCAST = "Proclaim Podcast Subscribe"
+MOD_PROCLAIM_PODCAST_XML_DESCRIPTION = "This module displays a list of podcast. Component must be installed."
