Update Date and Release number, Fix Checking for MediaFiles, Fix a problem with TemplateCode using old code from topics.

--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -109,7 +109,7 @@ JBS_CMN_ERROR_RESETTING_HITS = "An error occured while resetting the hits:"
 JBS_CMN_ERROR_RESETTING_PLAYS = "An error occured while resetting the plays:"
 JBS_CMN_EXPORT = "Export"
 JBS_CMN_FIELDSET_PUBLISHING = "Publishing"
-JBS_CMN_FIELDSET_RULES = "Template Access Rules"
+JBS_CMN_FIELDSET_RULES = "Access Rules"
 JBS_CMN_FIELD_LANGUAGE_DESC = "This record is shown, if the respective language is selected. If this field is empty, the apropriate string in the language file ist used. Unused languages do not need to be filled in."
 JBS_CMN_FILESIZE = "Filesize"
 JBS_CMN_FILTERS_BOOKS = "Select one or more books"
