Fix #750 add check for new teacher duplicate

--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -781,7 +781,7 @@ JBS_MDL_ITEMS_DESC = "Choose a number of messages to show on the module display"
 JBS_MDL_LANGUAGE_DESC = "Choose a language as a filter for studies that show up on the module list."
 JBS_MDL_LINK_TEXT = "Text to display in link"
 JBS_MDL_LINK_TEXT_DESC = "Enter the text for the link to display in the module footer"
-JBS_MDL_MEDIA = "Media Settings"    ; duplicate?
+JBS_MDL_MEDIA = "Media Settings"
 JBS_MDL_MEDIA_STORE_PAGE = "Virtuemart Display Page"
 JBS_MDL_MEDIA_STORE_PAGE_DESC = "If using Virtuemart item, setting for display page in url to store item."
 JBS_MDL_MORE_SETTINGS = "More Settings"
@@ -905,7 +905,7 @@ JBS_MED_SHOW_DOWNLOAD_ICON = "Show Download Icon"
 JBS_MED_SHOW_DOWNLOAD_ICON_DESC = "Download icon can be hidden, shown in conjuntion with media or only the download icon"
 JBS_MED_SHOW_ONLY_DOWNLOAD_ICON = "Show Only Download icon"
 JBS_MED_SURE_OVERWRITE_DETAILS = "Share Overite Details"
-JBS_MED_UPLOAD = "Upload"   ; duplicate
+JBS_MED_UPLOAD = "Upload
 JBS_MED_UPLOAD_EXISTS = "Error: File already exists"
 JBS_MED_UPLOAD_FAILED_CHECK_PATH = "Error: path failed check."
 JBS_MED_UPLOAD_FAILED_NOT_UPLOAD_THIS_FOLDER = "Error: Failed to upload to this folder"
@@ -1115,7 +1115,7 @@ JBS_STY_FROM_CHAPTER = "From chapter:"
 JBS_STY_GO_BUTTON = "Go"
 JBS_STY_HAS_ENTERED_COMMENT = "has entered a comment for the study entitled:"
 JBS_STY_HITS = "Hits"
-JBS_STY_INCORRECT_KEY = "Incorrect Key"   ; duplicate
+JBS_STY_INCORRECT_KEY = "Incorrect Key"
 JBS_STY_MEDIA_THIS_STUDY = "Media Files for this Study"
 JBS_STY_MESSAGETYPE_DESC = "Occasion of the message"
 JBS_STY_METADATA = "Set Metadata"
@@ -1217,6 +1217,7 @@ JBS_TCH_TITLE_DESC = "Title or salutation like Prof"
 JBS_TCH_TWITTER = "Twitter Feed"
 JBS_TCH_TWITTER_DESC = "Enter a full url link to the teacher's Twitter feed starting with http://"
 JBS_TCH_WEBSITE = "Website"
+JBS_TCH_DUPLICATE = "This Teacher name is a duplicate"
 
 ;; TITLE Title Block
 JBS_TITLE_ADMINISTRATION = "CWM-Proclaim: Administration"
