Fix #749 add check for new Server or Teacher delete or unpublished

--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -1166,6 +1166,7 @@ JBS_STYLE_RESTRICED_FILE_NAME = "File cannot be named 'main' or 'custom'"
 JBS_SVR_MEDIA_SETTINGS = "Media Settings"
 JBS_SVR_SERVER_NAME = "Server Name"
 JBS_SVR_SERVER_NAME_DESC = "Alias name to describe the server"
+JBS_SVR_CAN_NOT_DELETE = "Server is in use and cannot be removed unless the fallowing are updated or deleted. %s"
 
 ;; TCH Teacher
 COM_CONTACT_CHANGE_CONTACT_BUTTON = "Choose Contact"   ; review
