--- a/plugins/task/proclaim/language/en-GB/en-GB.plg_task_proclaim.ini
+++ b/plugins/task/proclaim/language/en-GB/en-GB.plg_task_proclaim.ini
@@ -12,11 +12,11 @@ PLG_TASK_PROCLAIM_UPDATE_TEXT = "Proclaim Task Plugin successfully updated"
 
 ; Backup Task Language strings
 PLG_TASK_PROCLAIM_BACKUP_HEADER = "This email contains a backup of your Proclaim database"
-PLG_TASK_PROCLAIM_BACKUP_TITLE = "Task - Proclaim Backup"
+PLG_TASK_PROCLAIM_BACKUP_TITLE = "Proclaim Backup"
 PLG_TASK_PROCLAIM_BACKUP_DESC = "Enables backup of Proclaim Component"
 PLG_TASK_PROCLAIM_BACKUP_BACKUP = "Proclaim Database Backup"
 PLG_TASK_PROCLAIM_BACKUP_RETENTION_PERIOD = "Backup to Keep on hand"
 
 ; Podcast Task Language strings
-PLG_TASK_PROCLAIM_PODCAST_TITLE = "Task - Proclaim Podcast"
+PLG_TASK_PROCLAIM_PODCAST_TITLE = "Proclaim Podcast"
 PLG_TASK_PROCLAIM_PODCAST_DESC = "Automatic publishing of podcast file for Proclaim Component"
