--- a/plugins/task/proclaim/language/en-GB/en-GB.plg_task_proclaim.sys.ini
+++ b/plugins/task/proclaim/language/en-GB/en-GB.plg_task_proclaim.sys.ini
@@ -4,5 +4,5 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-PLG_TASK_PROCLAIM = "Task - Proclaims"
+PLG_TASK_PROCLAIM = "Tasks - Proclaims"
 PLG_TASK_PROCLAIM_XML_DESCRIPTION = "Offers task routines for Proclaim"
