--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -304,6 +304,7 @@ JBS_CMN_CANT_ADDON_LOAD_CLASS_NAME = "Cannot load addon class name %s"
 JBS_CMN_COULD_NOT_LOAD_ADDON_CONFIGURATION = "Could not load addon configuration"
 JBS_CMN_PUBLISHED_ASC = "Published Ascending"
 JBS_CMN_PUBLISHED_DESC = "Published Descending"
+JBS_CMN_SELECT_SERVERTYPE = "- Selected Server Type -"
 
 ;; Grid Sort filter
 JBSM_GRID_SORT_BY = "Sort By"
