Move check for subtitle to preflight. Added menu fixes and module fixes. We Still need to add plugin to task conversion.

--- a/admin/language/en-GB/en-GB.com_proclaim.sys.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.sys.ini
@@ -64,6 +64,15 @@ JBS_MNU_TEMPLATE_CODE_DISPLAY = "Template Files"
 JBS_MNU_TEMPLATE_DISPLAY = "Template Display Settings"
 JBS_MNU_TOPICS = "Topics"
 
+; Admin Menu
+COM_PROCLAIM_MENUS_PRESET_PROCLAIM = "Preset - Proclaim Menu"
+COM_PROCLAIM_MENUS = "Proclaim"
+COM_PROCLAIM_MENUS_MESSAGE_MANAGER = "Messages Manager"
+COM_PROCLAIM_MENUS_FEATURED = "Featured"
+COM_PROCLAIM_MENUS_MANAGE = "Manage Fields"
+COM_PROCLAIM_MENUS_WORKFLOW = "Workflow"
+COM_PROCLAIM_MENUS_MISC = "Miscellaneous"
+
 JBS_MNU_COMMENTS_LIST_EDIT_LAYOUT = "Administer Comments"
 JBS_MNU_COMMENTS_LIST_EDIT_LAYOUT_DESC = "Create a link to the Administration Comments Page"
 JBS_MNU_LANDING_PAGE_LAYOUT = "Landing Page Layout"
