Fixed working in the Backup task description.

--- a/plugins/task/proclaim/language/en-GB/en-GB.plg_task_proclaim.ini
+++ b/plugins/task/proclaim/language/en-GB/en-GB.plg_task_proclaim.ini
@@ -13,7 +13,7 @@ PLG_TASK_PROCLAIM_UPDATE_TEXT = "Proclaim Task Plugin successfully updated"
 ; Backup Task Language strings
 PLG_TASK_PROCLAIM_BACKUP_HEADER = "This email contains a backup of your Proclaim database"
 PLG_TASK_PROCLAIM_BACKUP_TITLE = "Proclaim Backup"
-PLG_TASK_PROCLAIM_BACKUP_DESC = "Enables backup of Proclaim Component"
+PLG_TASK_PROCLAIM_BACKUP_DESC = "This Scheduled Task will Automated backups of Proclaim Component using the number of backup files to keep setting under Proclaim Administration Settings"
 PLG_TASK_PROCLAIM_BACKUP_BACKUP = "Proclaim Database Backup"
 PLG_TASK_PROCLAIM_BACKUP_RETENTION_PERIOD = "Backup to Keep on hand"
 
