--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -713,7 +713,7 @@ JBS_IBM_PI_STUDIES = "Studies converted: "
 JBS_IBM_PI_TEACHERS = "Teachers converted: "
 JBS_IBM_PREACHIT_RESULTS = "PreachIt Conversion Results"
 JBS_IBM_REVIEW_ADMIN_TEMPLATE = "Please review Admin and Template settings. View settings are set differently in this version of JBS."
-JBS_IBM_SAVE_DB = "Save your JBS database to /media/com_proclaim/backup"
+JBS_IBM_SAVE_DB = "Save your Proclaim database to /media/com_proclaim/backup"
 JBS_IBM_SELECT_DB = "Select a database file to restore"
 JBS_IBM_SERIES_CONVERTED = "Series converted"
 JBS_IBM_SERMONS_CREATED_FOR = "Sermons converted for"
