New mod_proclaimicon for Admin View.

--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -2,7 +2,7 @@
 ; Copyright (c) 2008 CWM Team
 ; License http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
-; Used only for Post Install Language Translations.
+; Used only for com_proclaim.
 COM_PROCLAIM = "CWM-Proclaim"
 
 ; Simple Mode message
@@ -18,6 +18,12 @@ COM_PROCLAIM_N_ITEMS_PUBLISHED = "%d item(s) published"
 COM_PROCLAIM_N_ITEMS_TRASHED = "%d Item(s) Trashed"
 COM_PROCLAIM_N_ITEMS_UNPUBLISHED = "%d items(s) unpublished"
 COM_PROCLAIM_N_ITEMS_CHECKED_IN = "%d items(s) checked in"
+COM_PROCLAIM_N_QUICKICON_MESSAGES_SRONLY="Proclaim: %d Messages are available."
+COM_PROCLAIM_N_QUICKICON_MESSAGES="Messages"
+COM_PROCLAIM_N_QUICKICON_MEDIAFILES_SRONLY="Proclaim: %d Media Files are available."
+COM_PROCLAIM_N_QUICKICON_MEDIAFILES="Media Files"
+COM_PROCLAIM_N_QUICKICON_SERIES_SRONLY="Proclaim: %d Series are available."
+COM_PROCLAIM_N_QUICKICON_SERIES="Series"
 
 ;; Content Articles
 COM_CONTENT_CHANGE_ARTICLE = "Select or Change article"
