--- a/admin/language/en-GB/en-GB.com_proclaim.sys.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.sys.ini
@@ -1,5 +1,5 @@
-; $Id: en-GB.COM_PROCLAIM.sys.ini 2025 2011-08-28 04:08:06Z genu $
-; Copyright (c) 2008 Tom Fuller
+; $Id: en-GB.com_proclaim.sys.ini 2025 2011-08-28 04:08:06Z genu $
+; Copyright (c) 2008 CWM Team
 ; License http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
