Add Option for cPanel for Proclaim.

--- a/modules/admin/mod_proclaimicon/language/en-GB/mod_proclaimicon.ini
+++ b/modules/admin/mod_proclaimicon/language/en-GB/mod_proclaimicon.ini
@@ -8,6 +8,8 @@ MOD_PROCLAIMICON = "Proclaim Icons"
 MOD_PROCLAIMICON_GROUP_DESC="The group of this module (this value is compared with the group value used in <strong>Quick Icons</strong> plugins to inject icons). The Joomla! core icons are available to be used in any Quick Icons module."
 MOD_PROCLAIMICON_GROUP_LABEL="Group"
 MOD_PROCLAIMICON_HEADER_ICON_LABEL="Header Icon"
+MOD_PROCLAIMICON_SHOW_HOME_LABEL = "cPanel"
+JBS_MNU_CONTROL_PANEL = "Proclaim cPanel"
 MOD_PROCLAIMICON_SHOW_MESSAGES_LABEL = "Messages"
 JBS_CMN_STUDIES_ADD = "Add Message"
 MOD_PROCLAIMICON_SHOW_MEDIAFILES_LABEL = "Media Files"
