Fixed some language strings

--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -1083,7 +1083,7 @@ JBS_SHR_ITEM = "Select an item to display"
 JBS_SHR_ITEMCUSTOM_DESC = "Enter a custom string including text and multiple items in brackets - see labels on drop down lists"
 JBS_SHR_ITEMPREFIX_DESC = "Enter a prefix to be used before this item like u="
 JBS_SHR_ITEM_DESC = "Select an item from the drop down list to display here"
-JBS_SHR_LINK_STUDY = "Link to study"
+JBS_SHR_LINK_STUDY = "Link to message"
 JBS_SHR_MAINLINK = "Main link to site and file"
 JBS_SHR_MAINLINK_DESC = "Enter a site and the main file used for social network sharing. Enter a complete url"
 JBS_SHR_NAME = "Name"
@@ -1099,7 +1099,7 @@ JBS_SHR_USERNAME_DESC = "This is not required. If left blank you will use CWM-Pr
 JBS_SHR_USE_BITLY = "Use link shortener bit.ly"
 JBS_SHR_USE_BITLY_DESC = "Shortens the link. Helps mainly for services like Twitter that only take a certain number of characters"
 
-;; STY Study List and Edit
+;; STY Message List and Edit
 JBS_STY_GENERAL = "General"
 JBS_CMN_PERMISSIONS = "Permissions"
 JBS_STY_IMAGES = "Images"
@@ -1110,31 +1110,31 @@ JBS_STY_CHAPTER_BEGIN = "Ch Begin"
 JBS_STY_CHAPTER_END2 = "Ch End 2"
 JBS_STY_CHAPTER_END = "Ch End"
 JBS_STY_CLICK_TO_OPEN_PASSAGE = "Bible Reference"
-JBS_STY_COMMENTS_DESC = "Allow comments for this study? -No- overrides global setting for this study only"
+JBS_STY_COMMENTS_DESC = "Allow comments for this message? -No- overrides global setting for this message only"
 JBS_STY_COMMENT_NOT_PUBLISHED = "This comment has not been published."
 JBS_STY_COMMENT_PUBLISHED = "This comment has been published."
 JBS_STY_COMMENT_SUBMITTED = "Comment Added"
 JBS_STY_COMMENT_UNPUBLISHED = "Comment Submitted for Review"
 JBS_STY_CREATE_DATE_DESC = "Date of the service or sermon"
-JBS_STY_DETAILS = "Study Details"
+JBS_STY_DETAILS = "Message Details"
 JBS_STY_DOWNLOAD_LINK = "Media File for Download Link"
 JBS_STY_DOWNLOAD_LINK_DESC = "If you choose to link an item from the studies list you can use this file as that link-only to the download of that file"
 JBS_STY_ERROR_SUBMITTING_COMMENT = "Error Submitting Comment"
 JBS_STY_FROM_CHAPTER = "From chapter:"
 JBS_STY_GO_BUTTON = "Go"
-JBS_STY_HAS_ENTERED_COMMENT = "has entered a comment for the study entitled:"
+JBS_STY_HAS_ENTERED_COMMENT = "has entered a comment for the message entitled:"
 JBS_STY_HITS = "Hits"
 JBS_STY_INCORRECT_KEY = "Incorrect Key"
-JBS_STY_MEDIA_THIS_STUDY = "Media Files for this Study"
+JBS_STY_MEDIA_THIS_STUDY = "Media Files for this Message"
 JBS_STY_MESSAGETYPE_DESC = "Occasion of the message"
 JBS_STY_METADATA = "Set Metadata"
 JBS_STY_METADESCRIPTION = "Meta Description"
-JBS_STY_METADESCRIPTION_DESC = "Enter a description. If left blank, study description is used"
+JBS_STY_METADESCRIPTION_DESC = "Enter a description. If left blank, message description is used"
 JBS_STY_METAKEYWORDS = "Keywords"
 JBS_STY_METAKEYWORDS_DESC = "Enter keywords separated by commas"
 JBS_STY_NO_COMMENT = "No comments available"
-JBS_STY_NO_MEDIAFILES = "No Media Files For This Study"
-JBS_STY_NO_PASSAGE_INCLUDED = "No Passage included in this study"
+JBS_STY_NO_MEDIAFILES = "No Media Files For This Message"
+JBS_STY_NO_PASSAGE_INCLUDED = "No Passage included in this message"
 JBS_STY_ON = "on"
 JBS_STY_PUBLISH = "Publishing"
 JBS_STY_RESET_HITS = "Reset Hits"
@@ -1144,8 +1144,8 @@ JBS_STY_SAVE_FIRST = "Click to Save and Add a Media File"
 JBS_STY_SCRIPTURE_DESC = "Enter begin and end chapters and verses; leave one or more items empty if needed"
 JBS_STY_SECONDARY_REFERENCES_DESC = "Secondary references like film, literature, web sites or similar"
 JBS_STY_SELECT_DOWNLOAD_LINK = "- Select a File -"
-JBS_STY_STUDY_IMAGE = "Study Image"
-JBS_STY_STUDY_TEXT = "Study Text"
+JBS_STY_STUDY_IMAGE = "Message Image"
+JBS_STY_STUDY_TEXT = "Message Text"
 JBS_STY_UPLOAD = "Upload Media File"
 JBS_STY_UPLOAD_BUTTON = "Upload"
 JBS_STY_VERSE_BEGIN2 = "Vs Begin 2"
@@ -1154,8 +1154,8 @@ JBS_STY_VERSE_END2 = "Vs End 2"
 JBS_STY_VERSE_END = "Vs End"
 JGLOBAL_ACTION_PERMISSIONS_LABEL = "Permissions"    ; review
 JGLOBAL_PERMISSIONS_ANCHOR = "Set Permissions"    ; review
-JBS_STY_NEW_STUDY = "Study : New"
-JBS_STY_EDIT_STUDY = "Study : Edit"
+JBS_STY_NEW_STUDY = "Message : New"
+JBS_STY_EDIT_STUDY = "Message : Edit"
 
 ;;Styles
 JBS_STYLE_CANNOT_DELETE_DEFAULT = "You cannot delete the default css file biblestudy.css"
@@ -1413,7 +1413,7 @@ JBS_TPL_CAPTCHA_USE = "Use reCaptcha"
 JBS_TPL_CHOOSE_BIBLE_VERSION = "Select Bible Version"
 JBS_TPL_CHOOSE_BIBLE_VERSION_DESC = "Choose which version of the Bible to use in the passage lookup"
 JBS_TPL_COLSPAN = "Columns to Span"
-JBS_TPL_COLSPAN_DESC = "How many columns should this item span. An example would be the study introduction. If you have four items in rows above, you might want this item to span 4 to take up the whole width. item be."
+JBS_TPL_COLSPAN_DESC = "How many columns should this item span. An example would be the message introduction. If you have four items in rows above, you might want this item to span 4 to take up the whole width. item be."
 JBS_TPL_COLUMN = "Order"
 JBS_TPL_COLUMN_DESC = "Choose what order to show this item in its row"
 JBS_TPL_COMMENT_TYPE = "Type of comments"
@@ -1448,19 +1448,19 @@ JBS_TPL_DETAILS_EMAIL_COMMENTS_DESC = "Set to yes if you want an email sent for 
 JBS_TPL_DETAILS_LINK_COMMENTS = "Type of Comments link"
 JBS_TPL_DETAILS_LINK_COMMENTS_DESC = "Determine whether there is a show/hide link for comments or show all the time"
 JBS_TPL_DETAILS_LINK_IMAGE = "Details Link Image"
-JBS_TPL_DETAILS_LINK_IMAGE_DESC = "Show this image when a link to the details is selected. See link selection in the studies list and study details tab."
+JBS_TPL_DETAILS_LINK_IMAGE_DESC = "Show this image when a link to the details is selected. See link selection in the studies list and message details tab."
 JBS_TPL_DETAILS_LINK_TEXT = "Text to show on bottom details page link to list"
-JBS_TPL_DETAILS_LINK_TEXT_DESC = "Put in text to show on the bottom of the study details page as a link back to the listing page."
+JBS_TPL_DETAILS_LINK_TEXT_DESC = "Put in text to show on the bottom of the message details page as a link back to the listing page."
 JBS_TPL_DETAILS_PDF = "Details PDF"
 JBS_TPL_DETAILS_RECIPIENT = "To Email address"
 JBS_TPL_DETAILS_RECIPIENT_DESC = "Email address to notify. Leave empty to send to the system default email address. Specify multiple addresses by separating them with a comma."
 JBS_TPL_DETAILS_SHOW_COMMENTS = "Access level for showing comments"
 JBS_TPL_DETAILS_SHOW_COMMENTS_DESC = "Sets access level for viewing comments."
-JBS_TPL_DETAILS_SHOW_PASSAGE_VIEW = "Show/Hide Passage in Study Details View"
-JBS_TPL_DETAILS_SHOW_PASSAGE_VIEW_DESC = "Shows the passage referenced in the Scripture of your study. Choose your Bible version and whether to use the Hide/Show link, always show, hide, or use a like to a popup window. Uses BibleGateway.com as source. Reference as $this->passage in custom template file."
+JBS_TPL_DETAILS_SHOW_PASSAGE_VIEW = "Show/Hide Passage in Message Details View"
+JBS_TPL_DETAILS_SHOW_PASSAGE_VIEW_DESC = "Shows the passage referenced in the Scripture of your message. Choose your Bible version and whether to use the Hide/Show link, always show, hide, or use a like to a popup window. Uses BibleGateway.com as source. Reference as $this->passage in custom template file."
 JBS_TPL_DETAILS_SHOW_PRINT_VIEW = "Show/Hide Print Button"
 JBS_TPL_DETAILS_SHOW_SCRIPTURE_LINK = "Use Content Plugins"
-JBS_TPL_DETAILS_SHOW_SCRIPTURE_LINK_DESC = "Choose whether to apply content plugins on study text. You can use the Scripturelinks plugin for all references in study text, for example."
+JBS_TPL_DETAILS_SHOW_SCRIPTURE_LINK_DESC = "Choose whether to apply content plugins on message text. You can use the Scripturelinks plugin for all references in message text, for example."
 JBS_TPL_DETAILS_STUDY_DETAILTEMPLATE = "Detail Template Code"
 JBS_TPL_DETAILS_SUBJECT = "Subject"
 JBS_TPL_DETAILS_TEMPLATECODE_DESC = "Use HTML to create your repeatable template. Any HTML will do.<br /><br /><u>TEMPLATE CODES</u><br /><br />{{title}} - Sermon Title<br />{{teacher}} - Teacher Name<br />{{date}} - Date<br />{{studyintro}} - Intro Text<br />{{scripture}} - Scripture Reference<br />{{topics}} - Topics (Tags)<br />{{mediatime}} - Time<br />{{thumbnail}} - Thumbnail Image<br />{{seriestext}} - Series Name<br />{{messagetype}} - Message Type<br />{{bookname}} - Book Name<br />{{studytext}} - Study Notes<br />{{scripturelink}} - Scripture Link<br />{{media}} - Media Table<br />{{share}} - Social Networking Links<br />{{hits}} - Hits<br />{{location}} - Location<br />{{messagetype}} - Message Type"
@@ -1488,7 +1488,7 @@ JBS_TPL_FILTERS_DEFAULTORDERSECONDARY = "Default order Secondary Page"
 JBS_TPL_FILTERS_DEFAULTORDERSECONDARY_DESC = "Choose Ascending or Descending as the order when a user goes to a drop down item like book or series"
 JBS_TPL_FILTERS_DEFAULTORDER_DESC = "Choose whether the default listing of studies should be in date ascending or descending order"
 JBS_TPL_FP_IMAGES_TOOLTIP = "Show/Hide Tooltip"
-JBS_TPL_FP_IMAGES_TOOLTIP_DESC = "Shows or hides a tooltip with details of your studies over the study details link"
+JBS_TPL_FP_IMAGES_TOOLTIP_DESC = "Shows or hides a tooltip with details of your studies over the message details link"
 JBS_TPL_FP_SHOW_PAGE_IMAGE = "Show/Hide Front Page Image"
 JBS_TPL_HEADER = "List Table Header Style"
 JBS_TPL_HEADER_DESC = "Choose a header style, either light or dark. These styles are based on Bootstrap"
@@ -1502,7 +1502,7 @@ JBS_TPL_HEADER5 = "Header 5"
 JBS_TPL_HEADERCODE = "Header Code"
 JBS_TPL_HEADERCODE_DESC = "Put any HTML in here you want for the header"
 JBS_TPL_HIDE_LINK = "Hide Link"
-JBS_TPL_HIDE_STUDY = "Hide Study Display"
+JBS_TPL_HIDE_STUDY = "Hide Message Display"
 JBS_TPL_HITS_BRACE = "Hits {hits}"
 JBS_TPL_HOURS_MIN_SEC_COLON = "H:M:S"
 JBS_TPL_HOURS_MIN_SEC_SLASH = "Hours/min/sec"
@@ -1612,7 +1612,7 @@ JBS_TPL_LOCATION_BRACE = "Location {location_text}"
 JBS_TPL_MEDIA_BACKCOLOR = "Pop Up Back Color"
 JBS_TPL_MEDIA_BACKCOLOR_DESC = "Use HEX something like 0x287585"
 JBS_TPL_MEDIA_BRACE = "Media {media}"
-JBS_TPL_MEDIA_DOWNLOADS = "Mediafile Downloads (total all for this study)"
+JBS_TPL_MEDIA_DOWNLOADS = "Mediafile Downloads (total all for this message)"
 JBS_TPL_MEDIA_EMBEDSHARE = "Allow Share Options in Media Player"
 JBS_TPL_MEDIA_EMBEDSHARE_DESC = "If set to Show a menu is presented in the internal media player that allows sharing and embedding options"
 JBS_TPL_MEDIA_FRONTCOLOR = "Pop Up Front Color"
@@ -1631,7 +1631,7 @@ JBS_TPL_MEDIA_PLAYER_HEIGHT = "Height for media player"
 JBS_TPL_MEDIA_PLAYER_HEIGHT_DESC = "Height in pixels of internal audio/video player. Can be overridden in media file. Hint: 23 is good height for just audio"
 JBS_TPL_MEDIA_PLAYER_WIDTH = "Width for media Player"
 JBS_TPL_MEDIA_PLAYER_WIDTH_DESC = "Width in pixels of internal audio/video player. Can be overridden in media file."
-JBS_TPL_MEDIA_PLAYS = "Mediafile Plays (total all for this study)"
+JBS_TPL_MEDIA_PLAYS = "Mediafile Plays (total all for this message)"
 JBS_TPL_MEDIA_POPUPBACKGROUND = "Background color for popup window"
 JBS_TPL_MEDIA_POPUPBACKGROUND_DESC = "Set a background color for the popup window."
 JBS_TPL_MEDIA_POPUPIMAGE = "Path to image for popup"
@@ -1657,7 +1657,7 @@ JBS_TPL_NO_LINK = "Not a link"
 JBS_TPL_NO_PLUGINS = "No Plugins"
 JBS_TPL_NO_SHARE = "No Share Menu"
 JBS_TPL_ORDER_BOOK = "Books Dropdown Order"
-JBS_TPL_ORDER_DESC = "Choose an order for this item to appear in the drop down lists on the study list view. If hidden it will not show."
+JBS_TPL_ORDER_DESC = "Choose an order for this item to appear in the drop down lists on the message list view. If hidden it will not show."
 JBS_TPL_ORDER_GO = "Go Button Dropdown Order"
 JBS_TPL_ORDER_LANGUAGE = "Language Drop Down Order"
 JBS_TPL_ORDER_LOCATIONS = "Locations Dropdown Order"
@@ -1705,8 +1705,8 @@ JBS_TPL_SERIESDETAIL_SERIES_DETAIL_LIMIT = "Number of studies to show"
 JBS_TPL_SERIESDETAIL_SERIES_DETAIL_LIMIT_DESC = "Choose a number of studies to show on the list. Leave blank for all. A link will be provided to the rest of the studies if limit set"
 JBS_TPL_SERIESDETAIL_SERIES_DETAIL_ORDER = "Sort Order"
 JBS_TPL_SERIESDETAIL_SERIES_DETAIL_ORDER_DESC = "Choose ascending or descending for the order of studies"
-JBS_TPL_SERIESDETAIL_SERIES_DETAIL_SORT = "Study sort column"
-JBS_TPL_SERIESDETAIL_SERIES_DETAIL_SORT_DESC = "Choose a study element to sort the studies list in the series detail section."
+JBS_TPL_SERIESDETAIL_SERIES_DETAIL_SORT = "Message sort column"
+JBS_TPL_SERIESDETAIL_SERIES_DETAIL_SORT_DESC = "Choose a message element to sort the studies list in the series detail section."
 JBS_TPL_SERIESDETAIL_SERIES_LIST_RETURN = "Show Link to all studies and Back to Series List"
 JBS_TPL_SERIESDETAIL_SERIES_LIST_RETURN_DESC = "Show/Hide a link to studiesview with all studies in series and a back to all Series at page bottom"
 JBS_TPL_SERIESDISPLAY_COLOR = "Background color for header"
@@ -1743,7 +1743,7 @@ JBS_TPL_SERIES_THUMBNAIL_BRACE = "Series Thumbnail {series_thumbnail}"
 JBS_TPL_SERIES_TITLE_TEXT = "Series Title"
 JBS_TPL_SERMONS_TEMPLATE = "Studies List Template File"
 JBS_TPL_SERMONS_TEMPLATE_DESC = "If you have created a custom template file you can choose it from this list. Otherwise just leave it as Use Default"
-JBS_TPL_SERMON_TEMPLATE = "Study Details Template File"
+JBS_TPL_SERMON_TEMPLATE = "Message Details Template File"
 JBS_TPL_SHARE_LABEL = "Share Labe"
 JBS_TPL_SHARE_DESC = "Create a label to to display before the share info."
 JBS_TPL_SHOW_ALL_BOOKS = "Show All Books"
@@ -1763,17 +1763,17 @@ JBS_TPL_SHOW_PODCAST_SUBSCRIBE_TOP = "Show at top"
 JBS_TPL_SHOW_RELATED = "Show related studies links"
 JBS_TPL_SHOW_RELATED_DESC = "Shows a drop down of links to related studies. This is powered by like meta keywords and/or topics between studies"
 JBS_TPL_SHOW_SHARE = "Show Share Menu"
-JBS_TPL_SHOW_STUDIES_STUDIESLIST = "Show Study Display with Studieslist set up"
+JBS_TPL_SHOW_STUDIES_STUDIESLIST = "Show Message Display with Studieslist set up"
 JBS_TPL_SHOW_UNLESS_FILTERED = "Show unless filtered"
 JBS_TPL_SHOW_VERSES_AND_CHAPTERS = "Show verses and chapters"
 JBS_TPL_STORE_BRACE = "Store {store}"
 JBS_TPL_STUDIESVIEW_TEMPLATECODE_DESC = "Use HTML to create your repeatable template.  Any HTML will do.<br /><br /><b><u>TEMPLATE CODES</u></b><br />{{title}} - Sermon Title<br />{{teacher}} - Teacher Name<br />{{date}} - Date<br />{{studyintro}} - Intro Text<br />{{scripture}} - Scripture Reference<br />{{topics}} - Topics (Tags)<br />{{mediatime}} - Time<br />{{thumbnail}} - Thumbnail Image<br />{{seriestext}} - Series Name<br />{{messagetype}} - Message Type<br />{{bookname}} - Book Name<br />{{studytext}} - Study Notes<br />{{scripturelink}} - Scripture Link<br />{{media}} - Media Table<br />{{share}} - Social Networking Links<br />{{printview}} - Print View Icon<br />{{pdfview}} - PDF View Icon<br />{{comments}} - Comments<br />{{hits}} - Hits<br />{{location}} - Location<br />{{messagetype}} - Message Type"
-JBS_TPL_STUDYIMAGE = "Study Image"
+JBS_TPL_STUDYIMAGE = "Message Image"
 JBS_TPL_STUDYNUMBER_BRACE = "Studynumber {studynumber}"
-JBS_TPL_STUDY_DETAILS_VIEW = "Study Details View"
+JBS_TPL_STUDY_DETAILS_VIEW = "Message Details View"
 JBS_TPL_STUDY_INTRO_BRACE = "Introduction {studyintro}"
 JBS_TPL_STUDY_LIST_CUSTOM = "Studies List Custom View"
-JBS_TPL_STUDY_LIST_VIEW = "Study List View"
+JBS_TPL_MESSAGE_LIST_VIEW = "Message List View"
 JBS_TPL_SUBMITTED_BRACE = "Submitted By {submitted}"
 JBS_TPL_SUBSCRIBE_INTRO = "Subscription header text"
 JBS_TPL_SUBSCRIBE_INTRO_DESC = "Add words for a header of the podcast subscription table"
@@ -1811,8 +1811,8 @@ JBS_TPL_TEMPLATE_SERIES_LIST = "Template Settings for Series List View"
 JBS_TPL_TEMPLATE_SERIES_LIST_DESC = "Choose a template for display of the series list linked from a view displayed with this template"
 JBS_TPL_TEMPLATE_STUDIES_LIST = "Template Settings for Studies List View"
 JBS_TPL_TEMPLATE_STUDIES_LIST_DESC = "Choose a template for display of studies list view linked from a view displayed with this template"
-JBS_TPL_TEMPLATE_STUDY_DETAIL = "Template Settings for Study Details"
-JBS_TPL_TEMPLATE_STUDY_DETAIL_DESC = "Choose a template for display of study details view linked from a view displayed with this template"
+JBS_TPL_TEMPLATE_STUDY_DETAIL = "Template Settings for Message Details"
+JBS_TPL_TEMPLATE_STUDY_DETAIL_DESC = "Choose a template for display of message details view linked from a view displayed with this template"
 JBS_TPL_TEMPLATE_TEACHER = "Template Settings for Teacher View"
 JBS_TPL_TEMPLATE_TEACHER_DESC = "Choose a template for display of teacher details view linked from a view displayed with this template"
 JBS_TPL_THUMBNAIL_BRACE = "Thumbnail {thumbnail}"
@@ -1858,7 +1858,7 @@ JBS_TPL_VERSES_DATE_FORMAT_DESC = "Set the date display format"
 JBS_TPL_VERSES_DURATION_TYPE = "Choose : or hours/min/sec"
 JBS_TPL_VERSES_DURATION_TYPE_DESC = "Choose a seperator for the duration, either : or hours/mins/secs"
 JBS_TPL_VERSES_SHOW_VERSES = "Chapters/Verses"
-JBS_TPL_VERSES_SHOW_VERSES_DESC = "Choose whether just chapter(s) of Bible study book shown or verses too"
+JBS_TPL_VERSES_SHOW_VERSES_DESC = "Choose whether just chapter(s) of Bible message book shown or verses too"
 JBS_TPL_VERSES_STYLESHEET = "Path to Your Stylesheet"
 JBS_TPL_VERSES_STYLESHEET_DESC = "Path from Joomla root to an alternate stylesheet (for advanced users only). Overrides page styles"
 JBS_TPL_WINDOW = "Window"
