--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -484,7 +484,7 @@ JBS_ADM_THUMBNAIL_STUDY_SIZE_DESC = "Size of the thumbnail for message"
 JBS_ADM_THUMBNAIL_TEACHER_SIZE = "Teacher thumbnail size (px):"
 JBS_ADM_THUMBNAIL_TEACHER_SIZE_DESC = "Size of the thumbnail for teachers"
 JBS_ADM_ARULESROWS = "Rules Not Set"
-JBS_ADM_MEDIATYPES_OPTIONS = "Chaneg player by file type"
+JBS_ADM_MEDIATYPES_OPTIONS = "Change player by file type"
 JBS_ADM_MEDIATYPES_DESC = "Select MimeType or Extension. Then select player that you wan't to use for them."
 JBS_ADM_JWPLAYER_RESPONSIVE_DESC = "Responsive player like 16:9"
 JBS_ADM_DATABASE = "DataBase Fix"
